--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -3,19 +3,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -23,25 +91,44 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -49,18 +136,175 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+/* Global selectors */
+html,
+body {
+	height: 100%;
+	font-family: 'Titillium Web', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-family: 'Bangers', cursive;
+	letter-spacing: 1px;
+	margin-bottom: 15px;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+/* Your code starts here! */
+* {
+	border: 2px solid grey;
+}
+
+/* Global selectors */
+body {
+	margin: 0% 15%;
+	background-color: white;
+}
+
+header {
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/* width: 70%; */
+	height: 8%;
+	background-color: white;
+
+}
+
+
+/* global header */
+header nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 75%;
+
+}
+
+hr {
+	border: 1px solid black;
+}
+
+header a {
+	width: 20%;
+	margin: 5% 4%;
+	color: grey;
+	text-decoration: none;
+}
+
+header a:hover {
+	color: black;
+}
+
+/* header img {
+	display: flex;
+	justify-content: flex-end;
+	top: 10%;
+	left: 76%;
+} */
+
+
+.CTASection {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	/* padding: 4% 3%;
+	margin: 6% 0px;
+	position: relative;
+	width: 100%;
+	margin-bottom: 10%; */
+}
+
+.CTASection img {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	/* position: absolute;
+	bottom: -6%;
+	left: 55%; */
+}
+
+.CTA {
+	font-size: 80px;
+	display: flex;
+	justify-content: space-evenly;
+	align-content: flex-end;
+	text-align: center;
+
+}
+
+.CTASection button {
+	width: 13%;
+	padding: 1% 0px;
+	color: grey;
+	background-color: white;
+	position: absolute;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+
+
+
+}
+
+
+.CTASection button:hover {
+	color: white;
+	background-color: grey;
+}
+
+
+.content {
+	display: inline-block;
+	position: relative;
+}
+
+.contentCard1,
+.contentCard2 {
+	width: 48%;
+	display: inline-block;
+	margin: 4% 7px;
+}
+
+.contentCard3,
+.contentCard4,
+.contentCard5 {
+	width: 32%;
+	display: inline-block;
+	margin: 4% 4px;
+}
+
+.middle-img {
+	width: 100%;
+}
+
+footer {
+	display: inline-block;
+	position: relative;
+	width: 100%;
+	margin: 3% 0;
+	line-height: 2;
+}
+
+address {
+	margin-top: -16px;
+}
+
+.copyright {
+	margin-top: 3%;
+	text-align: center;
+}
+
+.contact {
+	line-height: 2;
+}
+
+/* end of home page */
+/* start of services page */
