--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -213,8 +213,9 @@ header a:hover {
 
 .CTASection {
 	display: flex;
-	justify-content: space-around;
-	align-items: center;
+	justify-content: space-between;
+	/* justify-content: space-around;
+	align-items: center; */
 	/* padding: 4% 3%;
 	margin: 6% 0px;
 	position: relative;
@@ -222,32 +223,38 @@ header a:hover {
 	margin-bottom: 10%; */
 }
 
-.CTASection img {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	/* position: absolute;
-	bottom: -6%;
+/* .CTASection img { */
+
+
+/* position: absolute; */
+/* bottom: -6%;
 	left: 55%; */
-}
+/* }  */
 
 .CTA {
 	font-size: 80px;
-	display: flex;
 
+
+	/* display: flex; */
+	/* 
 	justify-content: flex-start;
-	flex-direction: column-reverse;
+	flex-direction: column-reverse; */
 
 }
 
 .CTASection button {
-	width: 13%;
+
+	width: 125px;
 	padding: 1% 0px;
 	color: grey;
 	background-color: white;
-	position: absolute;
 
 
+
+}
+
+h1 {
+	text-align: center;
 }
 
 
@@ -257,36 +264,35 @@ header a:hover {
 }
 
 
-.content {
-	display: inline-block;
-	position: relative;
+/* .content { */
+/* display: flex;
+	justify-content: space-evenly; */
+/* display: inline-block;
+	position: relative; */
+/* } */
+
+.topBox {
+	display: flex;
+	margin-bottom: 2%;
+
 }
 
-.contentCard1,
-.contentCard2 {
-	width: 48%;
-	display: inline-block;
-	margin: 4% 7px;
+.bottombox {
+	display: flex;
+	margin: 10px 10px;
 }
 
-.contentCard3,
-.contentCard4,
-.contentCard5 {
-	width: 32%;
-	display: inline-block;
-	margin: 4% 4px;
-}
 
 .middle-img {
 	width: 100%;
 }
 
 footer {
-	display: inline-block;
-	position: relative;
+	/* display: inline-block;
+	position: relative; */
 	width: 100%;
-	margin: 3% 0;
-	line-height: 2;
+	/* margin: 3% 0;
+	line-height: 2; */
 }
 
 address {
@@ -294,12 +300,15 @@ address {
 }
 
 .copyright {
-	margin-top: 3%;
+	/* margin-top: 3%; */
 	text-align: center;
 }
 
 .contact {
-	line-height: 2;
+	display: flex;
+	flex-direction: column;
+	/* align-items: space-between; */
+	/* line-height: 2; */
 }
 
 /* end of home page */
