--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -163,6 +163,8 @@ h5 {
 
 /* Global selectors */
 body {
+	/* display: flex;
+	flex-wrap: wrap; */
 	margin: 0% 15%;
 	background-color: white;
 }
@@ -316,49 +318,36 @@ h2 {
 	margin-bottom: 10px;
 }
 
-.boxes {
+/* section that contains all boxes */
+.box {
 	display: flex;
+	flex-wrap: wrap;
+	align-items: space-between;
 	justify-content: space-around;
+	/* padding: 25px 50px 75px; */
 
 }
 
-.digital {
-	/* display: flex;
-	justify-content: space-between; */
-	background: grey;
+/* end of boxes container */
+/* refers to each box. they all have the same styling */
+.service-item {
+	display: flex;
+	flex-wrap: wrap;
+	align-self: space-between;
+	justify-content: space-between;
+	background: lightgrey;
 	border: 1px solid black;
-	padding: 15px;
+	width: 45%;
+	padding: 20px;
+	margin-top: 10px;
 }
 
-.ui {
-	background: grey;
-	border: 1px solid black;
-	padding: 15px;
+.service-item p {
+	line-height: 20px;
+
 }
 
-.marketing {
-	background: grey;
-	border: 1px solid black;
-	padding: 15px;
-}
 
-.web {
-	background: grey;
-	border: 1px solid black;
-	padding: 15px;
-}
-
-.ios {
-	background: grey;
-	border: 1px solid black;
-	padding: 15px;
-}
-
-.android {
-	background: grey;
-	border: 1px solid black;
-	padding: 15px;
-}
 
 button {
 	padding: 5px;
